# SmartIrc4net

./: .gitignore  .gitmodules  .travis.yml  API_CHANGE  CHANGELOG  CREDITS  FEATURES  LICENSE  Makefile  Makefile.am  README  SmartIrc4net.csproj  SmartIrc4net.mdp  SmartIrc4net.mds  SmartIrc4net.sln  TODO  autogen.sh  configure.ac  packages.config  smartirc4net.pc.in  smartirc4net.snk
CSharpBuilder/: Meebey.SmartIrc4net.bdsgroup  Meebey.SmartIrc4net.bdsproj  Meebey.SmartIrc4net.dsk
MonoDevelop/: SmartIrc4net.cmbx  SmartIrc4net.mdp  SmartIrc4net.mds  SmartIrc4net.prjx
VisualStudio/: SmartIrc4net.csproj  SmartIrc4net.sln
VisualStudio/2003/: SmartIrc4net.csproj  SmartIrc4net.sln
VisualStudio/2005/: SmartIrc4net.csproj  SmartIrc4net.sln
VisualStudio/2008/: SmartIrc4net.csproj  SmartIrc4net.sln
debian/: changelog  control  copyright  docs  key.snk.uue  libsmartirc4net0.4-cil.install  libsmartirc4net0.4-cil.installcligac  libsmartirc4net0.4-cil.links  rules  watch
debian/patches/: 00list  use_debian_key.snk.dpatch
docs/: rfc2812.txt
examples/benchmark/: Makefile  benchmark-result.txt  benchmark.cs  benchmark.csproj  benchmark.prjx
examples/benchmark/MonoDevelop/: benchmark.cmbx  benchmark.mdp  benchmark.prjx
examples/benchmark/VisualStudio/: benchmark.csproj
examples/benchmark/VisualStudio/2003/: benchmark.csproj  benchmark.sln
examples/benchmark/VisualStudio/2005/: benchmark.csproj
examples/benchmark/VisualStudio/2008/: benchmark.csproj  benchmark.sln
examples/stresstest/: AssemblyInfo.cs  Makefile  stresstest.cs  stresstest.csproj
examples/stresstest/MonoDevelop/: stresstest.cmbx  stresstest.prjx
examples/stresstest/VisualStudio/: stresstest.csproj
examples/stresstest/VisualStudio/2003/: stresstest.csproj  stresstest.sln
examples/stresstest/VisualStudio/2005/: stresstest.csproj
examples/stresstest/VisualStudio/2008/: stresstest.csproj  stresstest.sln
examples/test/: AssemblyInfo.cs  Makefile  Test.cs  test.cs  test.csproj
examples/test/CSharpBuilder/: test.bdsproj  test.dsk
examples/test/MonoDevelop/: Test.cmbx  Test.prjx  test.cmbx  test.mdp  test.prjx
examples/test/VisualStudio/: test.csproj  test.sln
examples/test/VisualStudio/2003/: test.csproj
examples/test/VisualStudio/2005/: test.csproj
examples/test/VisualStudio/2008/: test.csproj  test.sln
src/: AssemblyInfo.cs  AssemblyInfo.cs.in  Channel.cs  ChannelUser.cs  ConcurrentDictionaryEx.cs  Consts.cs  Data.cs  Delegates.cs  EventArgs.cs  Exceptions.cs  IrcClient.cs  IrcCommands.cs  IrcConnection.cs  IrcMessageData.cs  IrcTcpClient.cs  IrcUser.cs  Logger.cs  Makefile  Makefile.am  Rfc2812.cs  User.cs
src/IrcClient/: BanInfo.cs  Channel.cs  ChannelInfo.cs  ChannelModeChangeInfo.cs  ChannelUser.cs  Delegates.cs  EventArgs.cs  IrcClient.cs  IrcMessageData.cs  IrcUser.cs  ListChannelInfo.cs  NonRfcChannel.cs  NonRfcChannelUser.cs  ServerProperties.cs  TwitchIrcClient.cs  WhoInfo.cs
src/IrcCommands/: Capability.cs  IrcCommands.cs  Rfc2812.cs
src/IrcConnection/: Delegates.cs  EventArgs.cs  IrcConnection.cs  IrcProperties.cs  IrcTcpClient.cs  PrimaryOrFallbackEncoding.cs  ProxyType.cs
src/IrcFeatures/: DccChat.cs  DccConnection.cs  DccSend.cs  Delegates.cs  EventArgs.cs  IrcConstants.cs  IrcFeatures.cs
src/IrcTransport/: IIrcTransportManager.cs  IrcTcpTransport.cs  IrcWebSocketTransport.cs  ProxyType.cs
src/StarkSoftProxy/: HttpProxyClient.cs  IProxyClient.cs  ProxyClientFactory.cs  Socks4ProxyClient.cs  Socks4aProxyClient.cs  Socks5ProxyClient.cs
src/StarkSoftProxy/EventArgs/: CreateConnectionAsyncCompletedEventArgs.cs
src/StarkSoftProxy/Exceptions/: ProxyException.cs
tests/: ChannelModeChangeInfoTests.cs  DccTests.cs  IrcClientTests.cs  IrcConnectionStressTests.cs  IrcConnectionTests.cs  ServerPropertiesTests.cs  packages.config  tests.csproj
tests/Properties/: AssemblyInfo.cs
